--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -1,17 +1,20 @@
 stages:
-- name: Build
+- stage: Build
+  displayName: Build stage
   steps:
   - runScriptConfig:
       image: maven:3-jdk-7
       shellScript: |-
         mvn clean install
-- name: Publish
+- stage: Publish
+  displayName: Publish stage
   steps:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: example-greenhouse:${CICD_EXECUTION_SEQUENCE}
-- name: Deploy
+      tag: mongodb-api:kuber
+- stage: Deploy
+  displayName: Deploy stage
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
